<resources>
    <string name="app_name">ParticipationEight</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_email">Email</string>
    <string name="action_sms">SMS</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="nav_slidelshow">Slideshow</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_manage">Tools</string>
</resources>
